# liveStream-study

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  changeFileNanme
src/base/: AppInfo.cpp  AppInfo.h  CMakeLists.txt  Config.cpp  Config.h  DomainInfo.cpp  DomainInfo.h  NonCopyable.h  Singleton.h  StringUtils.cpp  StringUtils.h  TTime.cpp  TTime.h  Task.cpp  Task.h  TaskManager.cpp  TaskManager.h  TaskMgr.cpp  TaskMgr.h  easylogging++.cc  easylogging++.h
src/base/tests/: CMakeLists.txt  TestStringUtils.cpp  TestTTime.cpp
src/live/: CMakeLists.txt  LiveService.cpp  LiveService.h  Session.cpp  Session.h  Stream.cpp  Stream.h
src/live/base/: CodecHeader.cpp  CodecHeader.h  CodecUtils.cpp  CodecUtils.h  GopManager.cpp  GopManager.h  LiveLog.h  TimeCorrector.cpp  TimeCorrector.h
src/live/user/: PlayerUser.cpp  PlayerUser.h  RtmpPlayUser.cpp  RtmpPlayUser.h  User.cpp  User.h
src/main/: CMakeLists.txt  main.cpp
src/mmedia/: CMakeLists.txt
src/mmedia/base/: BytesReader.cpp  BytesReader.h  BytesWriter.cpp  BytesWriter.h  MMediaHandler.h  MMediaLog.h  Packet.cpp  Packet.h
src/mmedia/rtmp/: RtmpClient.cpp  RtmpClient.h  RtmpContext.cpp  RtmpContext.h  RtmpHandShake.cpp  RtmpHandShake.h  RtmpHandler.h  RtmpHeader.h  RtmpServer.cpp  RtmpServer.h
src/mmedia/rtmp/amf/: AMFAny.cpp  AMFAny.h  AMFBoolean.cpp  AMFBoolean.h  AMFDate.cpp  AMFDate.h  AMFLongString.cpp  AMFLongString.h  AMFNull.cpp  AMFNull.h  AMFNumber.cpp  AMFNumber.h  AMFObject.cpp  AMFObject.h  AMFString.cpp  AMFString.h
src/mmedia/tests/: CMakeLists.txt  HandShakeClientTest.cpp  HandShakeServerTest.cpp  RtmpClientTest.cpp  RtmpServerTest.cpp
src/network/: CMakeLists.txt  DnsServer.cpp  DnsServer.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TestContext.cpp  TestContext.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
src/network/base/: InetAddress.cpp  InetAddress.h  MsgBuffer.cpp  MsgBuffer.h  Network.h  SocketOpt.cpp  SocketOpt.h
src/network/net/: Acceptor.cpp  Acceptor.h  Connection.cpp  Connection.h  Event.cpp  Event.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  PipeEvent.cpp  PipeEvent.h  TcpConnection.cpp  TcpConnection.h  TimingWheel.cpp  TimingWheel.h  UdpSocket.cpp  UdpSocket.h
src/network/net/tests/: AcceptorTest.cpp  CMakeLists.txt  DnsServerTest.cpp  EventLoopThreadTest.cpp  InetAddressTest.cpp  SocketOptTest.cpp  TcpClientTest.cpp  TcpConnectionTest.cpp  TcpServerTest.cpp  UdpClientTest.cpp  UdpServerTest.cpp
